# CommunicationSimulator

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.txt  uncrustify.cfg
apps/: CMakeLists.txt  main.cpp
cmake/: CMakeHelpers.cmake  CodeCoverage.cmake
include/: CommunicationFactory.hpp  Defines.hpp  Provider.hpp  ProviderSwarm.hpp  Requester.hpp  Utilities.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  TestsCommon.hpp
tests/integration_tests/: CMakeLists.txt  CommunicationIntegrationTests.cpp
tests/unit_tests/: CMakeLists.txt  CommunicationFactoryUnitTests.cpp  ProviderSwarmUnitTests.cpp  ProviderUnitTests.cpp  RequesterUnitTests.cpp
